<resources>
    <string name="app_name">FitKit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="splash_image">splash_image</string>
    <string name="no_account_register_now">No account? Signup now</string>
    <string name="password">Password*</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="already_have_account_log_in_now">Already have an account? Login now</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about">About</string>
    <string name="exercises">Exercises</string>
    <string name="prices">Prices</string>
    <string name="contact">Contact</string>
    <string name="more">More</string>
    <string name="logout">Logout</string>
    <string name="user">User</string>
    <string name="user_name">User Name</string>
    <string name="hamburger">hamburger</string>
    <string name="search">search</string>
    <string name="fit">Fit</string>
    <string name="kit"><u>Kit</u></string>
    <string name="welcome">Welcome!</string>
    <string name="sign_into_your_account">Sign into Your Account</string>
    <string name="email_id">Email Id*</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="workout_exercises">Workout Exercises</string>
    <string name="training_plan">Training Plan</string>
    <string name="shoulder_press">Shoulder Press</string>
    <string name="walking_is_simple_yet_powerful_exercise_for_your_body">Walking is simple, yet powerful exercise for your body</string>
    <string name="jogging">Jogging</string>
    <string name="abs_exercise">ABS exercise</string>
    <string name="jogging_is_not_so_simple_but_still_powerful_exercise_for_your_body">Jogging is not so simple, but still powerful exercise for your body</string>
    <string name="abs_is_hard_telling_that_time_is_so_fast_pretty_funny_though">ABS is hard. Time is so fast? Pretty funny, though. One minute = an hour</string>
    <string name="arms">Arms</string>
    <string name="you_don_t_have_any_new_notifications">You don\'t have any new notifications yet</string>
    <string name="_0_followers">0 Followers</string>
    <string name="splitter">|</string>
    <string name="_2k_following">2k Following</string>
    <string name="my_exercises">My Exercises</string>
    <string name="followers">Followers</string>
    <string name="you_have_no_followers">You have no followers :(</string>
</resources>