<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineProfileLeft"
        style="@style/guidelineLeft"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/activity_horizontal_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineProfileRight"
        style="@style/guidelineRight"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:id="@+id/profileHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/header_icon_size"
            android:layout_height="@dimen/header_icon_size"
            android:src="@drawable/ic_un" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/faustina_regular"
            android:letterSpacing="0.02"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_pre_large" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/drawer_item_vertical_margin"
            android:layout_marginBottom="@dimen/drawer_item_vertical_margin">

            <TextView
                style="@style/followersText"
                android:text="@string/_0_followers" />

            <TextView
                style="@style/followersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splitter" />

            <TextView
                style="@style/followersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2k_following" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewProfileExercises"
        style="@style/homeTitle"
        android:layout_marginTop="20dp"
        android:text="@string/my_exercises"
        app:layout_constraintStart_toStartOf="@id/guidelineProfileLeft"
        app:layout_constraintTop_toBottomOf="@id/profileHeader" />

    <LinearLayout
        android:id="@+id/layoutWorkoutExercises"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/drawer_item_vertical_margin"
        app:layout_constraintEnd_toStartOf="@+id/guidelineProfileRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineProfileLeft"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileExercises">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@drawable/man"
            app:shapeAppearanceOverlay="@style/ImageView.Corner" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@drawable/cardio"
            app:shapeAppearanceOverlay="@style/ImageView.Corner" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/arms"
            app:shapeAppearanceOverlay="@style/ImageView.Corner" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewProfileFollowers"
        style="@style/homeTitle"
        android:layout_marginTop="20dp"
        android:text="@string/followers"
        app:layout_constraintStart_toStartOf="@id/guidelineProfileLeft"
        app:layout_constraintTop_toBottomOf="@id/layoutWorkoutExercises" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/drawer_item_vertical_margin"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:text="@string/you_have_no_followers"
        android:textSize="@dimen/text_size_pre_medium"
        app:layout_constraintStart_toStartOf="@+id/guidelineProfileLeft"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileFollowers" />
</androidx.constraintlayout.widget.ConstraintLayout>